--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t wahoo66/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run wahoo66/docker-react npm run tst -- --coverage
+  - docker run wahoo66/docker-react npm run test -- --coverage
